avoid shifting bottom text on hover

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -34,6 +34,7 @@ main {
 
   &:hover {
     border: 1px solid white;
+    margin-bottom: -2px;
   }
 }
 
